# rust-microservice-example

./: Cargo.toml
src/: main.rs
src/config/: mod.rs
src/data/: repository.rs  user.rs
src/handler/: mod.rs  response_handler.rs  uri_handler.rs
src/pages/: mod.rs
