[package]
name = "xenadu_fitness"
version = "0.1.0"
edition = "2021"
author = "Stefan Simon"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.15.0", features = ["full"] }
futures = "0.3"
slab = "0.4"
log = "0.4"
pretty_env_logger = "0.4.0"
chrono="0.4"
clap= { version = "3.0.5", features = ["cargo"] }